<?xml version="1.0"?>
<!--
  The MIT License

  Copyright 2016 Rudy Alex Kohn (s133235@student.dtu.dk).

  Permission is hereby granted, free of charge, to any person obtaining a copy
  of this software and associated documentation files (the "Software"), to deal
  in the Software without restriction, including without limitation the rights
  to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  copies of the Software, and to permit persons to whom the Software is
  furnished to do so, subject to the following conditions:

  The above copyright notice and this permission notice shall be included in
  all copies or substantial portions of the Software.

  THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  THE SOFTWARE.
-->
<package>
    <name>qr_radar2</name>
    <version>0.0.3</version>
    <description>QR Radar</description>

    <maintainer email="s133235@student.dtu.dk">Rudy Alex Kohn</maintainer>
    <author email="s133235@student.dtu.dk">Rudy Alex Kohn</author>

    <license>MIT</license>

    <url type="website">http://rudz.dk/</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>zbar</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>cv_bridge</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>image_transport</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>image_transport</run_depend>
    <run_depend>zbar</run_depend>
    <run_depend>cv_bridge</run_depend>
    <run_depend>nodelet</run_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
    </export>
</package>
